--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,8 @@ HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+**/src/main/**/build/
+**/src/test/**/build/
 !**/src/gradlew
 !**/src/gradlew.bat
 
@@ -26,8 +26,8 @@ bin/
 *.iml
 *.ipr
 out/
-!**/src/main/**/out/
-!**/src/test/**/out/
+**/src/main/**/out/
+**/src/test/**/out/
 
 ### NetBeans ###
 /nbproject/private/
